--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container m-auto m-auto p-0 m-xs-0">
 
             <!-- Intro Card - to be hidden while playing-->
-            <div id="#intro" class="card hide">
+            <div id="#intro" class="card">
                 <div class="card-header bg-dark text-light text-center">
                     <h1>Quiz Game</h1>
                 </div>
@@ -47,10 +47,13 @@
                          to our high score board.
                      </p>
                 </div>
+                <div class="card-footer bg-dark text-light text-center">
+                    <button id="startBtn" class="btn btn-primary">Start</button>
+                </div>
             </div>
 
             <!-- Questions Card -->
-            <div id="#intro" class="card">
+            <div id="#questions" class="card hide">
                 <div class="card-header bg-dark text-light text-center">
                     <span id="questionSpan">Question will go here via javascript</span>
                 </div>
@@ -59,6 +62,21 @@
                 </div>
                 <div class="card-footer bg-light text-center">
                     <span id="answerSpan">Result of Answer will go here via javascript</span>
+                </div>
+            </div>
+
+            <!-- Results Card -->
+            <div id="#results" class="card hide">
+                <div class="card-header bg-dark text-light text-center">
+                    <h1>Results</h1>
+                </div>
+                <div class="card-body p-3 bg-light text-center">
+                    <p>This game is over</p>
+                    <span id="#scoreSpan">Results will go here via javascript</span>
+                    <p>Would you like to play again?</p>
+                </div>
+                <div class="card-footer bg-dark text-light text-center">
+                    <button id="retryBtn" class="btn btn-primary">Restart</button>
                 </div>
             </div>
 
