implemented the timer function to end the game, and all content Card switching

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container m-auto m-auto p-0 m-xs-0">
 
             <!-- Intro Card - to be hidden while playing-->
-            <div id="#intro" class="card">
+            <div id="intro" class="card">
                 <div class="card-header bg-dark text-light text-center">
                     <h1>Quiz Game</h1>
                 </div>
@@ -53,7 +53,7 @@
             </div>
 
             <!-- Questions Card -->
-            <div id="#questions" class="card hide">
+            <div id="questions" class="card hide">
                 <div class="card-header bg-dark text-light text-center">
                     <span id="questionSpan">Question will go here via javascript</span>
                 </div>
@@ -66,7 +66,7 @@
             </div>
 
             <!-- Results Card -->
-            <div id="#results" class="card hide">
+            <div id="results" class="card hide">
                 <div class="card-header bg-dark text-light text-center">
                     <h1>Results</h1>
                 </div>
