--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <!-- Timer box floats right -->
                 <div class="text-light float-right">
                     <div id="timerBar" class="text-center m-1">
-                        <div id="timerFill"></div>         <!-- percent of the time remaining-->
+                        <div id="timerFill" class="h-100 position-absolute"></div>         <!-- percent of the time remaining-->
                         <span class="zind2">Timer:</span>
                         <span id="timeSpan" class="zind2">00</span>
                     </div>
@@ -58,7 +58,7 @@
                     <span id="questionSpan">Question will go here via javascript</span>
                 </div>
                 <div class="card-body p-3 bg-light text-center">
-                    <span id="#choiceSpan">answers will go here via javascript</span>
+                    <span id="choiceSpan">answers will go here via javascript</span>
                 </div>
                 <div class="card-footer bg-light text-center">
                     <span id="answerSpan">Result of Answer will go here via javascript</span>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="card-body p-3 bg-light text-center">
                     <p>This game is over</p>
-                    <span id="#scoreSpan">Results will go here via javascript</span>
+                    <span id="scoreSpan">Results will go here via javascript</span>
                     <p>Would you like to play again?</p>
                 </div>
                 <div class="card-footer bg-dark text-light text-center">
