--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
                 <div class="card-header bg-dark text-light text-center">
                     <span id="questionSpan">Question will go here via javascript</span>
                 </div>
-                <div class="card-body p-3 bg-light text-center">
-                    <span id="choiceSpan">answers will go here via javascript</span>
+                <div class="card-body p-3 bg-light d-flex justify-content-center">
+                    <div class="d-inline-block">
+                        <span id="choiceSpan">answers will go here via javascript</span>
+                    </div>
                 </div>
                 <div class="card-footer bg-light text-center">
                     <span id="answerSpan">Result of Answer will go here via javascript</span>
