--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div class="card-footer bg-light text-center">
-                    <span id="answerSpan">Result of Answer will go here via javascript</span>
+                    <span id="answerSpan"></span>
                 </div>
             </div>
 
