--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
 
         <!-- JS Links -->
+        <script type="text/javascript" src="./questions.js"></script>
         <script type="text/javascript" src="./scripts.js"></script>
     </body>
 
