added the start of the review card, and restructured 'toggleCard' to 'changeCard', which will keep track of the last and current card for 'go back' functionality

--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
                 </div>
                 <div class="card-footer bg-dark text-light text-center">
                     <button id="retryBtn" class="btn btn-primary">Restart</button>
+                    <button id="reviewBtn" class="btn btn-primary">Review</button>
+                    
+                </div>
+            </div>
+
+            <!-- Review Card -->
+            <div id="review" class="card hide">
+                <div class="card-header bg-dark text-light text-center">
+                    <h1>Review</h1>
+                </div>
+                <div class="card-body p-3 bg-light text-center">
+                    <p>This is your review /p>
+                    <div id="reviewDiv">Results will go here via javascript</div>
+                </div>
+                <div class="card-footer bg-dark text-light text-center">
+                    <button id="resultRtrn" class="btn btn-primary">Go Back</button>
                 </div>
             </div>
 
