Added review review functionality.  Rewrote displayChoice class to take an optional object, so it can display without buttons, but with correct/chosen highlighting

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h1>Review</h1>
                 </div>
                 <div class="card-body p-3 bg-light text-center">
-                    <p>This is your review /p>
+                    <p>This is your review </p>
                     <div id="reviewDiv">Results will go here via javascript</div>
                 </div>
                 <div class="card-footer bg-dark text-light text-center">
