corrected a few typos in the code and html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         Try to answer the questions as quickly as possible.  
                      </p>
                      <p>
-                         An incorrect answer will decrease your remain time by 5 seconds.
+                         An incorrect answer will decrease your remaining time by 5 seconds.
                      </p>
                      <p>
                          Your remaining time will be converted to points at the end of the game, and your score will be submitted
