--- a/index.html
+++ b/index.html
@@ -77,9 +77,30 @@
                     <h1>Results</h1>
                 </div>
                 <div class="card-body p-3 bg-light text-center">
-                    <p>This game is over</p>
-                    <span id="scoreSpan">Results will go here via javascript</span>
-                    <p>Would you like to play again?</p>
+                    <p>This round is now over</p>
+
+                    <div id="scoreDisplay">
+                        You got
+                        <span id="correctSpan">X</span>
+                        /
+                        <span id="totalSpan">Y</span>
+                        total questions.
+
+                        <h4><span id="percentSpan">0</span>%</h4>
+                    </div>
+
+                    <h2><span id="scoreSpan"></span> Points</h2>
+
+
+                    <!-- Submit Score Form-->
+                    <form name="submitScore" id="submitScore" class="input-group mx-auto">
+                        <input type="text" name="initials" id="initialsInput" class="form-control" placeholder="Username/Initials">
+                        <div class="input-group-append">
+                            <button name="submitScoreBtn" id="submitScoreBtn" class="btn btn-primary">Submit</button>
+                        </div>
+                    </form>
+
+                    <p class="mt-3">Would you like to play again?</p>
                 </div>
                 <div class="card-footer bg-dark text-light text-center">
                     <button id="retryBtn" class="btn btn-primary">Restart</button>
