--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
             <div class="container-fluid bg-dark clearfix">
                 <!-- high score link floats left-->
                 <div class="text-light float-left">
-                    HighScores
+                    <div id = "highScoresBtn" class="">
+                        HighScores: 
+                        <span id="highestScore"></span>
+                    </div>
                 </div>
                 <!-- Timer box floats right -->
                 <div class="text-light float-right">
@@ -31,11 +34,23 @@
             </div>
         </header>
 
-        <!-- content -->
+        <!-- ERROR Card -->
         <div class="container m-auto m-auto p-0 m-xs-0">
+            <!-- Intro Card - to be hidden while playing-->
+            <div id="error" class="card">
+                <div class="card-header bg-dark text-light text-center">
+                    <h1>Uh Oh!</h1>
+                </div>
+                <div class="card-body p-3 text-center">
+                    <p>if you are viewing this page, then you must have javascript disabled!</p>
+                    <p>this page relies heavily on javascript, so if you would like to see my work, then please enable it.</p>
+                    <p>I really appreciate it, thank you.</p>
+                    <p class="mt-3"> - Brian Fairbanks</p>
+                </div>
+            </div>
 
             <!-- Intro Card - to be hidden while playing-->
-            <div id="intro" class="card">
+            <div id="intro" class="card hide">
                 <div class="card-header bg-dark text-light text-center">
                     <h1>Quiz Game</h1>
                 </div>
@@ -93,7 +108,7 @@
 
 
                     <!-- Submit Score Form-->
-                    <form name="submitScore" id="submitScore" class="input-group mx-auto">
+                    <form name="submitScore" id="submitScore" class="input-group mx-auto" method="POST">
                         <input type="text" name="initials" id="initialsInput" class="form-control" placeholder="Username/Initials">
                         <div class="input-group-append">
                             <button name="submitScoreBtn" id="submitScoreBtn" class="btn btn-primary">Submit</button>
@@ -119,7 +134,21 @@
                     <div id="reviewDiv">Results will go here via javascript</div>
                 </div>
                 <div class="card-footer bg-dark text-light text-center">
-                    <button id="resultRtrn" class="btn btn-primary">Go Back</button>
+                    <button class="btn btn-primary resultRtrn">Go Back</button>
+                </div>
+            </div>
+
+            <!-- highScores Card-->
+            <div id="highScores" class="card hide">
+                <div class="card-header bg-dark text-light text-center">
+                    <h1>High Scores</h1>
+                </div>
+                <div class="card-body p-3 text-center">
+                    <div id="highScoreInsert">
+                    </div>
+                </div>
+                <div class="card-footer bg-dark text-light text-center">
+                    <button class="btn btn-primary resultRtrn">Go Back</button>
                 </div>
             </div>
 
@@ -140,6 +169,7 @@
         <!-- JS Links -->
         <script type="text/javascript" src="./questions.js"></script>
         <script type="text/javascript" src="./scripts.js"></script>
+        <script type="text/javascript" src="./highScore.js"></script>
     </body>
 
 </html>
