--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
                         </div>
                     </form>
 
+                    <div id="scoreSubmitted" class=".hide">
+                        Thank you, your score has been submitted!
+                    </div>
+
                     <p class="mt-3">Would you like to play again?</p>
                 </div>
                 <div class="card-footer bg-dark text-light text-center">
