removed the possibility to get stuck in 'go back' hell: from highscores back to review to highsores forever

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div id="reviewDiv">Results will go here via javascript</div>
                 </div>
                 <div class="card-footer bg-dark text-light text-center">
-                    <button class="btn btn-primary resultRtrn">Go Back</button>
+                    <button id="toResultsBtn" class="btn btn-primary">Go Back</button>
                 </div>
             </div>
 
