removed a typo on the class for submission confirmation.  It shows after submitting now

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                         </div>
                     </form>
 
-                    <div id="scoreSubmitted" class=".hide">
-                        Thank you, your score has been submitted!
+                    <div id="scoreSubmitted" class="hide">
+                        <h5>Thank you, your score has been submitted!</h5>
                     </div>
 
                     <p class="mt-3">Would you like to play again?</p>
