--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                 </div>
                 <div class="card-body p-3">
                     <p>
-                        Try to answer the questions as quickly as possible.  
+                        Try to answer the questions as quickly as possible.  A correct answer can earn up to 100 points, but this will decrease to a base of 50 over 5 seconds.
                      </p>
                      <p>
-                         An incorrect answer will decrease your remaining time by 5 seconds.
+                         Don't go to fast for yourself, however, as an incorrect answer will award no points, and decrease your remaining time by 5 seconds.
                      </p>
                      <p>
-                         Your remaining time will be converted to points at the end of the game, and your score will be submitted
+                         Your remaining time will be converted an extra 10 points per second at the end of the game, and your score will be submitted
                          to our high score board.
                      </p>
                 </div>
