--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 </div>
                 <!-- Timer box floats right -->
                 <div class="text-light float-right">
-                    <div id="timerBar" class="text-center m-1">
-                        <div id="timerFill" class="h-100 position-absolute"></div>         <!-- percent of the time remaining-->
+                    <div id="timerBar" class="text-center m-1 timerBar">
+                        <div id="timerFill" class="timerFill h-100 position-absolute"></div>         <!-- percent of the time remaining-->
                         <span class="zind2">Timer:</span>
                         <span id="timeSpan" class="zind2">00</span>
                     </div>
@@ -76,13 +76,20 @@
                 <div class="card-header bg-dark text-light text-center">
                     <span id="questionSpan">Question will go here via javascript</span>
                 </div>
+                <!-- extra points timer -->
+                <div id = "extraPointsDiv"class="text-center m-0 w-100 m-0 p-0 position-relative">
+                    <div id="extraPointBar" class="timerFill h-100 position-absolute h-1"></div>
+                    <span class="zind2 text-size">
+                        Extra Points: <span id="extraPointsSpan"></span>
+                    </span>
+                </div>
+
                 <div class="card-body p-3 bg-light d-flex justify-content-center">
                     <div class="d-inline-block">
                         <span id="choiceSpan">answers will go here via javascript</span>
                     </div>
                 </div>
                 <div class="card-footer bg-light text-center">
-                    Extra Points: <span id="extraPointsSpan"></span>
                     <br>
                     <span id="answerSpan"></span>
                 </div>
