made the question timer bar less obtrusive.  changed the color, and made only 3 px tall

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     <h1>Uh Oh!</h1>
                 </div>
                 <div class="card-body p-3 text-center">
-                    <p>if you are viewing this page, then you must have javascript disabled!</p>
-                    <p>this page relies heavily on javascript, so if you would like to see my work, then please enable it.</p>
+                    <p>If you are viewing this page, then you must have javascript disabled!</p>
+                    <p>This page relies heavily on javascript, so if you would like to see my work, then please enable it.</p>
                     <p>I really appreciate it, thank you.</p>
                     <p class="mt-3"> - Brian Fairbanks</p>
                 </div>
@@ -59,7 +59,7 @@
                         Try to answer the questions as quickly as possible.  A correct answer can earn up to 100 points, but this will decrease to a base of 50 over 5 seconds.
                      </p>
                      <p>
-                         Don't go to fast for yourself, however, as an incorrect answer will award no points, and decrease your remaining time by 5 seconds.
+                         Don't go too fast for yourself, however, as an incorrect answer will award no points, and decrease your remaining time by 5 seconds.
                      </p>
                      <p>
                          Your remaining time will be converted an extra 10 points per second at the end of the game, and your score will be submitted
@@ -77,11 +77,8 @@
                     <span id="questionSpan">Question will go here via javascript</span>
                 </div>
                 <!-- extra points timer -->
-                <div id = "extraPointsDiv"class="text-center m-0 w-100 m-0 p-0 position-relative">
-                    <div id="extraPointBar" class="timerFill h-100 position-absolute h-1"></div>
-                    <span class="zind2 text-size">
-                        Extra Points: <span id="extraPointsSpan"></span>
-                    </span>
+                <div id = "extraPointsDiv"class="text-center m-0 w-100 position-relative">
+                    <div id="extraPointBar" class="timerFill h-100 position-absolute bg-primary"></div>
                 </div>
 
                 <div class="card-body p-3 bg-light d-flex justify-content-center">
@@ -104,9 +101,9 @@
                     <p>This round is now over</p>
 
                     <div id="scoreDisplay">
-                        you finished with 
-                        <span id=timeLeftSpan></span>seconds left!: 
-                        <b>+ <span id="timePointsSpan"></span> points!</b>
+                        You finished with 
+                        <span id=timeLeftSpan></span> seconds left!: 
+                        <b>+<span id="timePointsSpan"></span> points!</b>
                         <br>
                         You got
                         <span id="correctSpan">X</span>
