--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="card-body p-3">
                     <p>
-                        Try to answer the questions as quickly as possible.  A correct answer can earn up to 100 points, but this will decrease to a base of 50 over 5 seconds.
+                        Try to answer the questions as quickly as possible.  A correct answer can earn up to 100 points, but this will decrease to a base of 50 as the timer decreases.
                      </p>
                      <p>
                          Don't go too fast for yourself, however, as an incorrect answer will award no points, and decrease your remaining time by 5 seconds.
