added another 24 questions relating to CSS

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <span id="questionSpan">Question will go here via javascript</span>
                 </div>
                 <!-- extra points timer -->
-                <div id = "extraPointsDiv"class="text-center m-0 w-100 position-relative">
+                <div id = "extraPointsDiv"class="text-center m-0 w-100 position-relative bg-secondary">
                     <div id="extraPointBar" class="timerFill h-100 position-absolute bg-primary"></div>
                 </div>
 
