hid the time remaining/score addition if the time ran out

--- a/index.html
+++ b/index.html
@@ -101,10 +101,12 @@
                     <p>This round is now over</p>
 
                     <div id="scoreDisplay">
-                        You finished with 
-                        <span id=timeLeftSpan></span> seconds left!: 
-                        <b>+<span id="timePointsSpan"></span> points!</b>
-                        <br>
+                        <div id="timeRemainingDiv">
+                            You finished with 
+                            <span id=timeLeftSpan></span> seconds left!: 
+                            <b>+<span id="timePointsSpan"></span> points!</b>
+                            <br>
+                        </div>
                         You got
                         <span id="correctSpan">X</span>
                         /
